--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
   
 }
 
+a{
+  text-decoration: none;
+  outline: none;
+}
+
 body.noscroll {
   overflow: hidden;
 }
@@ -19,13 +24,16 @@ nav {
   height: 80px;
   width: 100%;
 }
+
 label.logo {
-  color: white;
+  color: rgb(229, 226, 226);
   font-size: 35px;
   line-height: 80px;
   padding: 0 100px;
   font-weight: bold;
+  font-family: 'Shadows Into Light', cursive;
 }
+
 nav ul {
   float: right;
   margin-right: 20px;
@@ -45,7 +53,7 @@ nav ul li a {
 
 }
 a.active,
-a:hover {
+a:not(.logo-text):hover {
   background: #1b9bff;
   transition: 0.5s;
 }
@@ -125,4 +133,10 @@ main a {
   top: -40px;
  height: 300px;
   overflow-y: none;
+}
+
+.img-logo{
+  height: 80px;
+  
+ 
 }
